<App/> - made styled work

--- a/widget/src/tldraw_stuff/styles.css
+++ b/widget/src/tldraw_stuff/styles.css
@@ -1,3 +1,5 @@
+// lakesare: Not sure if we need this. If we do, we should copypaste some of this into `styled` so that the vscode extension can use it.
+
 // @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700');
 
 // html,
