--- a/app/src/index.css
+++ b/app/src/index.css
@@ -106,3 +106,15 @@ html, * {
 .node-not-focused{
   opacity: 0.2;
 }
+
+/* uncomment fill to see what it's doing */
+/* Looks interesting, but looks like it's cleaner with no css at all */
+.window:hover{
+  /* fill: rgb(238, 228, 241); */
+  /* cursor: pointer !important; */
+}
+
+.window-indicator{
+  stroke: transparent;
+  display: none;
+}
