--- a/app/src/index.css
+++ b/app/src/index.css
@@ -52,7 +52,12 @@ const colors=[ "#1f2933",
 .tl-frame_body.depth-0 { fill: rgba(132, 147, 171, 0.11); }
 .tl-frame_body.depth-1 { fill: rgba(132, 147, 171, 0.17); }
 .tl-frame_body.depth-2 { fill: rgba(132, 147, 171, 0.24); }
-
+.tl-frame_body.depth-3 { fill: rgba(132, 147, 171, 0.3); }
+.tl-frame_body.depth-4 { fill: rgba(132, 147, 171, 0.4); }
+// All of the previous ones were tested on a real proof, these ones are my guesses for what would look okay
+.tl-frame_body.depth-5 { fill: rgba(132, 147, 171, 0.5); }
+.tl-frame_body.depth-6 { fill: rgba(132, 147, 171, 0.55); }
+.tl-frame_body.depth-7 { fill: rgba(132, 147, 171, 0.6); }
 
 .goalUsername{
   position: absolute;
