--- a/app/src/index.css
+++ b/app/src/index.css
@@ -125,6 +125,10 @@ html, * {
   /* cursor: pointer !important; */
 }
 
+[data-shape-type="window"]:hover .goalUsername{
+  background: rgba(147, 153, 162, 0.16) !important;
+}
+
 .window-indicator{
   stroke: transparent;
   display: none;
