--- a/app/src/index.css
+++ b/app/src/index.css
@@ -135,13 +135,14 @@ html, * {
 }
 
 
-
+/* ***EXPERIMENTAL*** */
 .hypArrow g{
   stroke: rgb(150, 201, 167);
 }
 .goalArrow g{
   stroke: rgb(214, 215, 215);
 }
+/* ***EXPERIMENTAL*** */
 
 
 /* Makes it possible to select text in nodes */
