app - add onClick zooming into into a box

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -60,9 +60,8 @@
 
 .child-boxes{
   display: flex;
+  align-items: flex-end;
 }
-
-
 
 .-hint{
   position: relative;
@@ -93,6 +92,12 @@ table td{
   padding: 0;
 }
 
+
+
+
+.react-transform-wrapper{
+  height: 100%;
+}
 
 
 
