--- a/app/src/index.css
+++ b/app/src/index.css
@@ -5,6 +5,14 @@
   max-width: 200px;
   min-width: calc(100% - 24px);
 }
+.hypothesis, .tactic{
+  max-width: 200px;
+  /* min-width: calc(100% - 24px); */
+}
+table td{
+  /* this if for hypotheses, e.g. see irrational proof */
+  vertical-align: top;
+}
 
 /* Backgrounds for windows */
 .box{
@@ -119,6 +127,7 @@ body{
 }
 .tactic.-spans-multiple-hypotheses{
   width: auto;
+  max-width: 100%;
 }
 
 .hypothesis{
