app - perfect-arrow experiments

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -65,6 +65,16 @@ body{
 }
 
 
+#box-1{
+  position: relative;
+}
+.perfect-arrow{
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+
 .hypotheses{
   display: flex;
 }
