app - remove implemented /old excerpts

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -65,14 +65,14 @@ body{
 }
 
 
-#box-1{
+/* #box-1{
   position: relative;
-}
-.perfect-arrow{
+} */
+/* .perfect-arrow{
   position: absolute;
   top: 0;
   left: 0;
-}
+} */
 
 
 .hypotheses{
