--- a/app/src/index.css
+++ b/app/src/index.css
@@ -244,3 +244,9 @@ body::-webkit-scrollbar {
 .tldraw-wrapper.-vscode-dark-theme .tl-background{
   background-color: var(--vscode-editor-background);
 }
+
+
+.MuiSnackbar-root .MuiSnackbarContent-root {
+  background-color: white;
+  color: #434343;
+}
